--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   <main class="main-content">
     <div class="container">
-      <h2>Pregúntale algo a nuestro CEO (JH)</h2>
+      <h2>Pregúntale algo a nuestro CEO (JH) Town Hall Meeting</h2>
 
       <textarea id="questionInput" placeholder="Escribe tu pregunta aquí..." rows="5"></textarea>
 
