--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
 
       <button id="submitButton">Enviar Pregunta</button>
 
-      <p id="feedbackMessage" class="feedback"></p>
+      <p id="feedbackMessage" class="feedback"></p> <!-- Message area -->
     </div>
   </main>
 
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- Link to the updated script -->
 </body>
 </html>
