--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
     <main id="app">
       <div class="card">
-        <h2>Pregúntale algo a nuestro CEO (JH)</h2>
-        <textarea id="questionInput" placeholder="Escribe tu pregunta aquí..." rows="4"></textarea>
-        <button id="submitButton">Enviar Pregunta</button>
-        <p id="responseMessage"></p>
+        <h2>Envía tu pregunta para el Town Hall</h2>
+        <div class="form-container">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnQVKuSYPT_c-B4TlOktOMXi7_SHImV_XV0xsWjaroJY3apg/viewform?embedded=true" width="100%" height="450" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        </div>
       </div>
     </main>
-    <script type="module" src="/main.js"></script>
+    <!-- No longer need main.js -->
   </body>
 </html>
