--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pregúntale al CEO</title>
-  <!-- Import Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header class="main-header">
-    <h1>HBL - Herramienta Interna</h1>
-  </header>
-
-  <main class="main-content">
-    <div class="container">
-      <h2>Pregúntale algo a nuestro CEO (JH) Town Hall Meeting</h2>
-
-      <textarea id="questionInput" placeholder="Escribe tu pregunta aquí..." rows="5"></textarea>
-
-      <button id="submitButton">Enviar Pregunta</button>
-
-      <p id="feedbackMessage" class="feedback"></p> <!-- Message area -->
-    </div>
-  </main>
-
-  <script src="script.js"></script> <!-- Link to the updated script -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HBL - Preguntas Town Hall</title>
+    <link rel="stylesheet" href="/style.css">
+  </head>
+  <body>
+    <header>
+      <h1>HBL - Herramienta Interna (Town Hall)</h1>
+    </header>
+    <main id="app">
+      <div class="card">
+        <h2>Envía tu pregunta para el Town Hall</h2>
+        <div class="form-container">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnQVKuSYPT_c-B4TlOktOMXi7_SHImV_XV0xsWjaroJY3apg/viewform?embedded=true" width="100%" height="450" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        </div>
+      </div>
+    </main>
+    <!-- No longer need main.js -->
+  </body>
 </html>
